# weather_project

./: README.md  pyproject.toml
weather_project/: .env  main copy.py  main.py  sber_token.py
